# midori

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: clippy_check.yml  cross_compile.yml  release.yml
docs/: h2.md  quic.md  tcp.md  tls.md  udp.md  uds.md  ws.md
proto/: grpc_stream.proto
src/: main.rs
src/cmd/: mod.rs  nav.rs
src/config/: dns.rs  ep.rs  mod.rs  net.rs  tls.rs  trans.rs
src/dns/: mod.rs
src/error/: addr.rs  cert.rs  mod.rs
src/io/: copy.rs  mod.rs  zero_copy.rs
src/relay/: common.rs  mod.rs  net.rs  stream.rs  transport.rs  types.rs  udp.rs  zero_copy.rs
src/transport/: h2.rs  mod.rs  plain.rs  quic.rs  tls.rs  udp.rs  ws.rs
src/transport/h2/: accept.rs  connect.rs  mod.rs  stream.rs
src/transport/plain/: accept.rs  connect.rs  mod.rs  stream.rs
src/transport/quic/: accept.rs  connect.rs  mod.rs  quic.rs  stream.rs
src/transport/udp/: accept.rs  connect.rs  mod.rs  stream.rs
src/transport/ws/: accept.rs  connect.rs  mod.rs  stream.rs
src/utils/: cert.rs  consts.rs  macros.rs  mod.rs  types.rs
