[package]
edition = "2018"
name = "midori"
version = "0.1.1"
authors = ["zephyr <i@zephyr.moe>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
http = "0.2"
bytes = "1"
futures = "0.3"
lazy_static = "1"
async-trait = "0.1"

clap = "2"
clippy = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
trust-dns-resolver = "0.20"
tokio-tungstenite = "0.15"
