[package]
edition = "2018"
name = "midori"
version = "0.4.1"
authors = ["zephyr <i@zephyr.moe>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
http = "0.2"
bytes = "1"
socket2 = "0.4"
futures = "0.3"
lazy_static = "1"
async-trait = "0.1"

clap = "2"
clippy = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.13"
rustls = { version = "0.19", features = ["dangerous_configuration"] }
rcgen = "0.8"
webpki = "0.21"
webpki-roots = "0.21"
rustls-native-certs = { version = "0.5", features = ["rustls"] }


tokio = { version = "1.9", features = ["full"] }
trust-dns-resolver = "0.20"
tokio-rustls = "0.22"
tokio-tungstenite = "0.15"
h2 = "0.3"